# guitar_songs_manager

./: .gitignore  AGENTS.md  ENV  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  db.py  main.py  models.py  schemas.py  settings.py
app/api/: logic.py  songs.py
app/logic/: __init__.py  chords.py  language.py
app/services/: __init__.py  content.py  songs.py
app/static/: app.js  db.js  index.html  style.css
features/: 0001-python-rewrite.txt  0002-verse-chorus-indicators.txt  0003-single-letter-consonant-glue.txt  0004-inline-chord-notation.txt  0005-deployment-plan.txt  0006-copy-song-lyrics.txt
tests/: test_logic_chords.py
